Modulo de cartas funcional

--- a/src/app/pages/carta/carta.page.html
+++ b/src/app/pages/carta/carta.page.html
@@ -1,8 +1,20 @@
-<ion-content color="mycolor2">
-<ion-label color="texto"><h1>Aqui se mostrara la carta y el reto</h1></ion-label>
-
-  <ion-button (click)="cerrarModal()" expand="block">
-    Siguiente
-  </ion-button>
-
+<ion-content>
+  <ion-slides pager="ios" class="slide-full"  [options]="slideOpts">
+    <ion-slide>
+     <ion-card mode="ios">
+       <ion-img src="/assets/icon/icon.png" class="slide-image"></ion-img>
+      
+       <ion-card-content>
+       Aqui se mostraran las preguntas
+       </ion-card-content>
+       <ion-img src="/assets/icon/icon.png" class="slide-image2"></ion-img>
+     </ion-card>
+     <ion-button (click)="cerrarModal()" expand="block" class="btn-continuar">
+      Siguiente
+    </ion-button>
+    </ion-slide>
+    
+  
+  </ion-slides>
+  
 </ion-content>
