--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -16,7 +16,7 @@
 -->
 <ion-grid fixed class="ion-text-center">
   <ion-row class="ion-text-center">
-    <ion-col size="6" *ngFor="let c of componentes" >
+    <ion-col size="12" size-lg="3" size-md="4" size-sm="6" *ngFor="let c of componentes" >
         <ion-card (click)="CambiarVentana(c.name)">
           <ion-img src="/assets/b1.jpg"></ion-img>
           <ion-card-header>
