--- a/src/app/pages/piramide/piramide.page.scss
+++ b/src/app/pages/piramide/piramide.page.scss
@@ -4,30 +4,16 @@ ion-grid{
   //  position: relative;
 }
 ion-row{
-    margin-top: 5px;
-    height: 10%;
-    width: 100%;
+     height: 10%;
+     width: 100%; 
+     margin-top: 5px;
+     justify-content: center;
 }
 ion-col{
     width: 100%;
-    height: 100%;
-    position: relative;
-    padding: 5px;
+    text-align: center;
 }
 ion-img{
     width: 100%;
     height: 100%;
-    position: absolute;
-}
-.img-der{
-    right: 30%;
-}
-.img-izq{
-    left: 30%;
-}
-.img-der2{
-    right: 20%;
-}
-.img-izq2{
-    left: 20%;
 }
