--- a/src/global.scss
+++ b/src/global.scss
@@ -59,5 +59,10 @@
     box-shadow: 0 1px 0 rgba(255,255,255,.5) inset,
       0 1px 3px rgba(0,0,0,.2);
   }
+  //@at-root
+  ion-content{
+    background-image: linear-gradient(to bottom, #051937, #0d3053, #144971, #19648f, #1d80ac) !important;
+  }
+
 
 
