Cambio Estilo Jugador  a medias

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -2,7 +2,7 @@ ion-slide {
     display: block;
     width: 100%;
     height: 100% !important;
-    background-image: linear-gradient(to bottom, #051937, #0d3053, #144971, #19648f, #1d80ac);
+    background: #8fc2cf;
   }
   
   h3 {
