--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -68,8 +68,8 @@
 
 
 //Color defecto Menu
---ion-color-mycolor: #051937;
---ion-color-mycolor2: #031A3B;
+--ion-color-mycolor: #845899;
+--ion-color-mycolor2: #8fc2cf;
 --ion-color-texto: #ffffff;
 }
 
@@ -145,9 +145,9 @@
 
  
 //Color defecto Menu
-  --ion-color-mycolor: #051937;
-  --ion-color-mycolor2: #031A3B;
-  --ion-color-texto: #ffffff;
+  --ion-color-mycolor: #01238f;
+  --ion-color-mycolor2: #00b4c5;
+  --ion-color-texto: #6AC7ED;
   }
 
   /*
