--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -2,16 +2,16 @@
 <ion-content class="ion-padding" color="mycolor2">
 <input type="" class="myinput"  color="texto" placeholder="Jugador" [(ngModel)]="nombrejugador"/>
 <ion-grid fixed>
-  <ion-row>
+  <ion-row style="text-align: center;">
     <ion-col size="6">
-      <ion-button class="cont-img" color="mycolor2" (click)="cambiarGenero('m')">
-          <ion-img src="/assets/masculino.png"></ion-img>
+      <ion-button class="cont-img" color="mycolor2">
+          <ion-img src="/assets/img/pirata.png"  (click)="cambiarGenero('m')"></ion-img>
       </ion-button>
      
     </ion-col>
     <ion-col size="6">
       <ion-button class="cont-img" color="mycolor2" (click)="cambiarGenero('f')"> 
-      <ion-img src="/assets/femenino.png"></ion-img>
+      <ion-img src="/assets/img/sirena.png"></ion-img>
     </ion-button>
     </ion-col>
   </ion-row>
