--- a/src/app/pages/jugadores/jugadores.page.scss
+++ b/src/app/pages/jugadores/jugadores.page.scss
@@ -1,19 +1,23 @@
-
-    ion-img,.cont-img{
-        height: 100px;
-        width: 100px;
+ion-img,.cont-img{
+        height: 150px;
+        width: 150px;
         
-    }
+}
 ion-img:hover{
-background-color: red;
+background-color: #e0dfe3;
     }
-
+    ion-button{
+        outline:none;
+    }
+    ion-col{
+        justify-content: center;
+    }
 
     .myinput{
         background: rgb(255, 255, 255);
         height: 50px;
         width: 100%;
-        color: black;
+        color: #c3156b;
         text-align: center;
         font-size: 40px;
         text-shadow:  0 -1px 0 rgba(0,0,0,.5);;
