--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@ ion-icon {
     width: 1em;
     height: 1em;
     }
-    &[class*=”barbadosAPP”] {
-    mask-image: url(../assets/icon/icon.svg);
+    &[class*=´botella´] {
+    mask-image: url(../assets/icon/botella.png);
     }
     }
