--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
     <ion-slide text-center>
       
       <div class="slide-img-padding">
-        <img src="/assets/gifCarga.gif" class="slide-img">
+        <img src="/assets/img/pdlb.png" class="slide-img">
       </div>
       <ion-label text-center><h1>Barbados App</h1></ion-label>
       
