--- a/src/global.scss
+++ b/src/global.scss
@@ -28,9 +28,9 @@
 //Mis CssGlobales
 .btn-3d {
     padding: .6rem 1rem;
-    border: 1px solid #c3156b;
+    border: 1px solid #a511ad;
     border-radius: 4px;
-    background: #c3156b;
+    background: #a511ad;
     color: #fff;
     font-size: 1.5rem;
     width: 100%;
@@ -40,12 +40,12 @@
   }
   
   .btn-3d:hover, .btn-3d:focus {
-    border: 1px solid #59419f;
-    background-color: #59419f;
+    border: 1px solid #60157a;
+    background-color: #60157a;
   }
   
   .btn-3d:active {
-    background-color: #59419f;
+    background-color: #60157a;
     box-shadow: 0 2px 3px 0 rgba(0,0,0,.2) inset;
   }
 
