--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -69,7 +69,7 @@
 
 //Color defecto Menu
 --ion-color-mycolor: #845899;
---ion-color-mycolor2: #8fc2cf;
+--ion-color-mycolor2: #07d2f2;
 --ion-color-texto: #ffffff;
 }
 
