--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <ion-list color="mycolor2" class="ion-no-border" class="ion-no-padding">
   
       <ion-menu-toggle *ngFor="let c of componentes | async"  autoHide="false" class="ion-no-padding" color="mycolor2" >
-        <ion-item  [routerLink]="c.redirectTo" detail color="mycolor2">
+        <ion-item  (click)="CambiarVentana(c.name)" detail color="mycolor2">
           <ion-icon [name]="c.icon" color="texto" slot="start"></ion-icon>
         <ion-label color="texto"> {{c.name}}</ion-label> 
         </ion-item>
