--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,14 +2,11 @@
   
   <ion-slides pager="true" [options]="slideOpts">
 
-    <ion-slide text-center>
+    <ion-slide>
       
-      <div class="slide-img-padding">
-        <img src="/assets/img/pdlb.png" class="slide-img">
-      </div>
-      <ion-label text-center><h1>Barbados App</h1></ion-label>
       
-
+        <img src="/assets/gif/inicio.gif" class="slide-img"> 
+      
     </ion-slide>
 
   </ion-slides>
