--- a/src/app/pages/jugadores/jugadores.page.scss
+++ b/src/app/pages/jugadores/jugadores.page.scss
@@ -11,14 +11,15 @@ ion-img,.cont-img{
         justify-content: center;
     }
     ::placeholder { 
-        color: #B3A9A7;
+        color: #a511ad;
     }
     .myinput{
-        background:#a511ad;
+        background:#fff;
         height: 50px;
         width: 100%;
-        color: #fff;
+        color: #a511ad;
         text-align: center;
         font-size: 40px;
         text-shadow:  0 -1px 0 rgba(0,0,0,.5);;
     }
+    
