--- a/src/app/pages/piramide/piramide.page.html
+++ b/src/app/pages/piramide/piramide.page.html
@@ -1,4 +1,4 @@
-<ion-content class="ion-no-padding" style="text-align: center;" color="mycolor2">
+<ion-content class="ion-no-padding" style="text-align: center;" color="mycolor">
   <ion-grid style="text-align: center;">
     <ion-row style="text-align: center;">
       <ion-col>
