--- a/src/global.scss
+++ b/src/global.scss
@@ -43,6 +43,9 @@
     border: 1px solid #60157a;
     background-color: #60157a;
   }
+  ion-card{
+    background: #845899  !important;
+  }
   
   .btn-3d:active {
     background-color: #60157a;
