--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,3 @@
-ion-icon {
-    &[class*=”custom-”] {
-    mask-size: contain;
-    mask-position: 50% 50%;
-    mask-repeat: no-repeat;
-    background: currentColor;
-    width: 1em;
-    height: 1em;
-    }
-    &[class*=´botella´] {
-    mask-image: url(../assets/icon/botella.png);
-    }
-    }
+.alertCss{
+    background: #a511ad;
+}
