--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -2,34 +2,19 @@ ion-slide {
     display: block;
     width: 100%;
     height: 100% !important;
-    background: #8fc2cf;
+    background: #11e6ee;
   }
   
-  h3 {
-    font-size: 40;  
-    font-weight: lighter;
-    margin-bottom: 60px;
-  }
-  
+ 
   img {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 35%;
+    margin-bottom: auto;
     max-height: 400px;
   }
   
-  .slide-img-padding {
-    padding: 40px;
-    top: 350px;
-  }
   
-  .slide-img{
-    margin-top: 25%;
-  }
-  .btn-primary {
-    height: 60px;
-  }
-  
-  ion-grid {
-    margin-bottom: 20px;
-  }
   
   ion-slides {
   
