--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -1,16 +1,16 @@
 
 <ion-content class="ion-padding" color="mycolor2">
-<input type="" class="myinput"  color="texto" placeholder="¿TE ATREVES?" [(ngModel)]="nombrejugador"/>
+<input type="" class="myinput"  color="texto" placeholder="Nickname" [(ngModel)]="nombrejugador"/>
 <ion-grid fixed>
   <ion-row style="text-align: center;">
     <ion-col size="6">
-      <ion-button class="cont-img" color="mycolor2" (click)="cambiarGenero('m')">
+      <ion-button class="cont-img" color="mycolor2" (click)="cambiarGenero('Masculino')">
           <ion-img [src]="imgHombre"></ion-img>
       </ion-button>
      
     </ion-col>
     <ion-col size="6">
-      <ion-button class="cont-img" color="mycolor2" (click)="cambiarGenero('f')"> 
+      <ion-button class="cont-img" color="mycolor2" (click)="cambiarGenero('Femenino')"> 
       <ion-img [src]="imgMujer"></ion-img>
     </ion-button>
     </ion-col>
@@ -19,7 +19,7 @@
   <button expand="block" class="btn-3d" (click)="agregarJugador()" text-center>Añadir Jugador</button>
 
 <ion-list color="mycolor2" class="ion-no-border" class="ion-no-padding">
-  <ion-list-header text-center color="mycolor2">
+  <ion-list-header text-center color="mycolor2"> 
     <ion-label color="texto" style="text-align: center;"><h1 >Jugadores</h1></ion-label>
     
   </ion-list-header>
