--- a/src/app/pages/niveles/niveles.page.html
+++ b/src/app/pages/niveles/niveles.page.html
@@ -1,21 +1,20 @@
 
-<ion-content color="mycolor2">
-<ion-grid fixed>
-  <ion-row>
-    <ion-col>
-      <ion-label color="texto"> <h1>  Niveles</h1></ion-label>
-   
-    </ion-col>
-  </ion-row>
-</ion-grid>
 
-<ion-list color="mycolor2"  class="ion-no-border" class="ion-no-padding">
-<ion-item *ngFor="let nivel of niveles " color="mycolor2">
-  <ion-label color="texto">{{nivel.nivel}}</ion-label>
-  <ion-icon slot="start" name="botella"></ion-icon>
-  <ion-checkbox slot="end" [(ngModel)]="nivel.selected"></ion-checkbox>
-</ion-item>
-</ion-list>
-<ion-label color="danger">{{txtMostrar}}</ion-label>
-<button expand="block" (click)="cargarPartida()"   class="btn-3d">Empezar a jugar</button>
-</ion-content>
+<ion-content color="mycolor2" class="ion-padding">
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6" size-lg="3" size-md="4" size-sm="6" *ngFor="let nivel of niveles ">
+        <ion-card (click)="seleccionado(nivel)" 
+        [ngClass]="{'selected': nivel.selected}" >
+          <ion-img src="/assets/b1.jpg"></ion-img>
+          <ion-card-content >
+            <ion-label color="texto" style="margin-right: 5px; font-size: 13px;"> {{nivel.nivel}}</ion-label>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-label color="danger">{{txtMostrar}}</ion-label>
+  <button expand="block" (click)="cargarPartida()"   class="btn-3d">Empezar a jugar</button>
+  </ion-content>
+  
