--- a/src/app/pages/niveles/niveles.page.scss
+++ b/src/app/pages/niveles/niveles.page.scss
@@ -1,3 +1,15 @@
-ion-content{
-    background-image: linear-gradient(to bottom, #051937, #0d3053, #144971, #19648f, #1d80ac);
+
+ion-card {
+background: #a511ad;
+}
+.selected{
+    background-color: #60157a !important;
+}
+ion-checkbox{
+    position: relative;
+    margin-right: -70px;
+    margin-top: 5px;
+}
+ion-card-content {
+    text-align: center;
 }
