--- a/src/app/pages/piramide/piramide.page.scss
+++ b/src/app/pages/piramide/piramide.page.scss
@@ -4,16 +4,20 @@ ion-grid{
   //  position: relative;
 }
 ion-row{
-     height: 10%;
+    height: 90px;
      width: 100%; 
      margin-top: 5px;
      justify-content: center;
+     
 }
 ion-col{
-    width: 100%;
-    text-align: center;
+    width: 65px;
+    height: 90px;
 }
 ion-img{
-    width: 100%;
-    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 65px;
+    height: 90px;
 }
