--- a/src/app/pages/verdad-oreto/verdad-oreto.page.html
+++ b/src/app/pages/verdad-oreto/verdad-oreto.page.html
@@ -1,39 +1,59 @@
 
-<ion-content>
+<ion-content color="mycolor2">
   <ion-slides pager="ios" class="slide-full" *ngIf="ocultarSlider" [options]="slideOpts">
     <ion-slide>
+    
      <ion-card mode="ios">
-       <ion-img src="/assets/gifCarga.gif" class="slide-image"></ion-img>
+       <ion-img src="/assets/img/icon.png" class="slide-image"></ion-img>
        <ion-card-header>
-         <ion-card-subtitle>Cargando</ion-card-subtitle>
+         <ion-card-subtitle> <label > Cargando</label></ion-card-subtitle>
        </ion-card-header>
        <ion-card-content>
-       Espere por favor...
+        <label > Espere por favor...</label>
        </ion-card-content>
      </ion-card>
     </ion-slide>
   </ion-slides>
 
 
-  <ion-slides pager="ios" class="slide-full" *ngIf="!ocultarSlider">
+  <ion-slides pager="ios" class="slide-full" *ngIf="!ocultarSlider && !final">
+    <ion-button class="info" slot="icon-only" >
+      <ion-icon slot="start" name="information-circle"></ion-icon>
+    </ion-button>
+    <ion-slide>
+    
+     <ion-card mode="ios">
+     
+       <ion-img [src]="tipoImagen" class="slide-image"></ion-img> 
+       
+       <ion-card-header >
+      <!--  <ion-card-subtitle><label ><h3>{{jugadorActual}}</h3></label></ion-card-subtitle>--> 
+       </ion-card-header>
+       <br>
+       <ion-card-content  >
+        <label style="font-size: 20px; ">  <h3>{{preguntaMostrar.pregunta}}</h3></label>
+       </ion-card-content>
+       <br>
+        <button expand="block" (click)="Jugar()"    class="btn-3d">Siguiente</button>
+     </ion-card> 
+    </ion-slide>
+  </ion-slides>
+  <ion-slides pager="ios" class="slide-full" *ngIf="final">
     <ion-slide>
    
      <ion-card mode="ios">
      
        <ion-img [src]="tipoImagen" class="slide-image"></ion-img> 
        
-       <ion-card-header>
-         <ion-card-subtitle>{{jugadorActual}}</ion-card-subtitle>
+       <ion-card-header >
+        <ion-card-subtitle><label ><h3>Fin del juego</h3></label></ion-card-subtitle>
        </ion-card-header>
-       <ion-card-content>
-       {{preguntaMostrar.pregunta}}
+       <ion-card-content  >
+        <button expand="block" (click)="reiniciar()"    class="btn-3d">Reiniciar</button>
+        <button expand="block" (click)="salir()"    class="btn-3d">Ir al inicio</button>
        </ion-card-content>
-       <ion-label ><h1>{{tipo}}</h1></ion-label>
-      <ion-button (click)="Jugar()" class="btn-continuar">
-       Continuar
-      </ion-button>
      </ion-card> 
     </ion-slide>
   </ion-slides>
-  
+
 </ion-content>
