Primero juego Ok, falta preguntas

--- a/src/app/pages/carta/carta.page.html
+++ b/src/app/pages/carta/carta.page.html
@@ -1,4 +1,4 @@
-<ion-content color="mycolor">
+<ion-content color="mycolor2" class="ion-padding">
   <ion-slides pager="ios" class="slide-full"  [options]="slideOpts">
     <ion-slide>
 
@@ -11,8 +11,8 @@
     </ion-slide>
     <button (click)="cerrarModal()" expand="block" class="btn-3d">
       Siguiente
-    </ion-button>
+    </button>
   
   </ion-slides>
-  
+
 </ion-content>
