--- a/src/app/pages/piramide/piramide.page.html
+++ b/src/app/pages/piramide/piramide.page.html
@@ -1,12 +1,13 @@
-<ion-content class="ion-no-padding" style="text-align: center;" color="mycolor">
+<ion-content class="ion-no-padding" style="text-align: center;" color="mycolor2">
   <ion-grid style="text-align: center;">
-    <ion-row style="text-align: center;">
+   <ion-row style="text-align: center;">
       <ion-col>
         <ion-label color="texto">
           <h1>Piramide</h1>
         </ion-label>
       </ion-col>
     </ion-row>
+    
     <ion-row text-center>
       <ion-col size="2" text-center>
 
