--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -20,7 +20,7 @@
         <ion-card (click)="CambiarVentana(c.name)">
           <ion-img src="/assets/b1.jpg"></ion-img>
           <ion-card-header>
-            <ion-card-title>{{c.name}}</ion-card-title>
+            <ion-card-title><label color="texto">{{c.name}}</label></ion-card-title>
           </ion-card-header>
         </ion-card>
         
