--- a/src/global.scss
+++ b/src/global.scss
@@ -28,9 +28,9 @@
 //Mis CssGlobales
 .btn-3d {
     padding: .6rem 1rem;
-    border: 1px solid #a511ad;
+    border: 1px solid #845899;
     border-radius: 4px;
-    background: #a511ad;
+    background: #845899;
     color: #fff;
     font-size: 1.5rem;
     width: 100%;
