Piramide con bloqueos

--- a/src/app/pages/carta/carta.page.html
+++ b/src/app/pages/carta/carta.page.html
@@ -5,7 +5,7 @@
        <ion-img [src]="imagen"></ion-img>
       
        <ion-card-content>
-      <label > Aqui se mostraran las preguntas</label>
+      <label class="pregunta"> Aqui se mostraran las preguntas</label>
        </ion-card-content>
    
     </ion-slide>
