--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
 <ion-app>
-  <ion-menu menuId='menu-main' class="ion-no-border" class="ion-no-padding" content-id='main' color="mycolor2">
+  <ion-menu menuId='menu-main' class="ion-no-border" class="ion-no-padding" content-id='main'>
     <ion-header >
       <ion-toolbar color="mycolor" class="ion-no-border" class="ion-no-padding">
         <ion-title color="texto">Barbados 1569</ion-title>
       </ion-toolbar>
     </ion-header >
+    
     <ion-content color="mycolor2" class="ion-no-border" class="ion-no-padding">
+      <ion-img style="width: 100%;" src="/assets/gif/inicio.gif"></ion-img>
+      <!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/921426" class="snapwidget-widget" allowtransparency="true" frameborder="0" 
+scrolling="no" style="border:none; overflow:hidden;  width:100%; height:500%; top: auto; bottom: auto;"></iframe>
+      <!--
     <ion-list color="mycolor2" class="ion-no-border" class="ion-no-padding">
   
       <ion-menu-toggle *ngFor="let c of componentes | async"  autoHide="false" class="ion-no-padding" color="mycolor2" >
@@ -18,10 +24,13 @@
 
 
     </ion-list>
+    -->
   </ion-content>
+  <!--
   <ion-item color="mycolor2" class="ion-no-border" class="ion-no-padding">
     <ion-label color="texto">Redes Sociales</ion-label>
   </ion-item>
+-->
   <ion-list class="ion-no-border" class="ion-no-padding">
 
     <ion-menu-toggle *ngFor="let c of redesSociales | async" autoHide="false">
