--- a/src/global.scss
+++ b/src/global.scss
@@ -64,6 +64,9 @@
   ion-content{
     background-image: linear-gradient(to bottom, #051937, #0d3053, #144971, #19648f, #1d80ac) !important;
   }
+  label{
+    color: #fff !important;
+  }
 
 
 
