--- a/src/app/pages/niveles/niveles.page.html
+++ b/src/app/pages/niveles/niveles.page.html
@@ -27,7 +27,8 @@
     </ion-row>
   </ion-grid>
   <ion-label color="danger">{{txtMostrar}}</ion-label>
-  <button expand="block" (click)="cargarPartida()"   class="btn-3d">Empezar a jugar</button>
+  <button expand="block" (click)="cargarPartida()" style="margin-bottom: 20px;"  class="btn-3d">Empezar a jugar</button>
+  <ion-label class="mensaje"><h1>{{mensaje}}</h1></ion-label>
   </ion-content>
   <ion-footer>
     <ion-toolbar style="text-align: center;" color="footer">
