--- a/src/app/pages/niveles/niveles.page.scss
+++ b/src/app/pages/niveles/niveles.page.scss
@@ -13,3 +13,10 @@ ion-checkbox{
 ion-card-content {
     text-align: center;
 }
+
+.mensaje{
+    top: 20px !important;
+    text-align: center !important;
+    color: #fff !important;
+    font-weight: bold;
+}
