--- a/src/app/pages/verdad-oreto/verdad-oreto.page.scss
+++ b/src/app/pages/verdad-oreto/verdad-oreto.page.scss
@@ -23,6 +23,11 @@ ion-card {
     height: 300px;
     width: 300px;
 }
+.ion-card {
+    position: fixed;
+    height: 250px;
+    width: 250px;
+}
 .tipo{
     top: -300px;
 }
