--- a/src/app/pages/jugadores/jugadores.page.html
+++ b/src/app/pages/jugadores/jugadores.page.html
@@ -34,5 +34,5 @@
   </ion-item>
 </ion-list>
 <ion-label  *ngIf="condicion" color="danger">{{textoCondicion}}</ion-label>
-<button expand="block" class="btn-3d" (click)="cargarPartida()" text-center >Seleccionar niveles</button>
+<button expand="block" class="btn-3d" (click)="cargarPartida()" text-center >A jugar</button>
 </ion-content>
