--- a/src/app/pages/piramide/piramide.page.html
+++ b/src/app/pages/piramide/piramide.page.html
@@ -16,7 +16,9 @@
 </ion-header>
  
 <ion-content class="ion-no-padding" style="text-align: center;" color="mycolor2">
-  <ion-grid style="text-align: center;">
+  
+  <app-carga *ngIf="!mostrar"></app-carga>
+  <ion-grid style="text-align: center;" *ngIf="mostrar">
    
     
     <ion-row text-center>
