--- a/src/app/pages/verdad-oreto/verdad-oreto.page.scss
+++ b/src/app/pages/verdad-oreto/verdad-oreto.page.scss
@@ -8,7 +8,7 @@
 .slide-full {
     height: 100% !important;
     position: relative;
-  //  background-image: linear-gradient(to bottom, #051937, #0d3053, #144971, #19648f, #1d80ac);
+  
 }
 label{
     color: #fff;
@@ -31,6 +31,28 @@ ion-card {
 .tipo{
     top: -300px;
 }
+.rotacion {
+    width: 200px;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: -100px;
+    -webkit-animation: spin 5s linear infinite;
+    -moz-animation: spin 5s linear infinite ;
+    animation: spin 5s linear infinite;
+}
+/*para rotacion*/
+@-webkit-keyframes spin{
+    100%{-webkit-transform: rotate(360deg);}
+}
+@-moz-keyframes spin{
+    100%{-webkit-transform: rotate(360deg);}
+}
+@keyframes spin{
+    100%{-webkit-transform: rotate(360deg);}
+}
 .slide-image {
     width: 150px;
     text-align: center;
@@ -42,6 +64,7 @@ ion-card {
     position: relative;
     top: -50px;
 }
+
 .slide-image2 {
     width: 250px;
     text-align: center;
